--- a/wp-content/plugins/pl-platform/engine/ui/plugins/squire/document.html
+++ b/wp-content/plugins/pl-platform/engine/ui/plugins/squire/document.html
@@ -5,6 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title></title>
 <style type="text/css">
+
   html {
     height: 100%;
   }
@@ -17,7 +18,10 @@
     color: #2b2b2b;
     
     width: 100%;
-    font: 12px/1.35 "Source Sans Pro", "Helvetica Neue" Helvetica, arial, sans-serif;
+    font-size: 14px;
+    line-height: 1.35;
+    font-family: "Lato", "Helvetica Neue", Helvetica, arial, sans-serif;
+
     cursor: text;
     padding: .5em;
     margin: 0;
@@ -27,6 +31,7 @@
     text-decoration: underline;
   }
   h1, h2, h3, h4, h5, h6, .h1, .h2, .h3,.h4,.h5,.h6{
+    font-family: "Lato", "Helvetica Neue", Helvetica, arial, sans-serif;
     font-weight: 600;
   }
   h1, .h1{
